[B]Version 1.0.99[/B]
- Fix movietv.to scraper
- Improve WatchHD scraper
- Gracefully fail when path isn't writeable
- Try #1 to fix utf-8 in paths

[B]Version 1.0.98[/B]
- Fix easynews scraper
- Fix rare exception in MNE
- Add db recovery attempt on bad db model & malformed db
- Update translations

[B]Version 1.0.97[/B]
- Add WatchHD scraper
- Add Iflix scraper
- Avoid exception when sort keys don't exist 
- Handle trakt usernames with special characters

[B]Version 1.0.96[/B]
- Add support for default trakt list item sorting
- Allow add to favorites for Lists
- filter xxx titles from filmikz results
- Simplify json parsing
- Fix icefilms scraper
- Fix 123movies scraper
- Fix diziay scraper
- Fix MoviePlanet scraper
- Fix yify-streaming scraper
- Fix wmo scraper
- Fix beinmovie scraper
- Fix OneClickTVShows scraper
- Fix Ororo.tv scraper
- Update ocw scraper
- Improve sezonlukdizi scraper
- Remove shush scraper

[B]Version 1.0.94[/B]
- Fix dizilab scraper
- Update twomovies scraper
- Update moviefarsi scraper (still broken)
- Add putmv scraper
- Update uflix scraper
- Improve Mira scraper
- Improve MoviesPlayer scraper
- Fix torba scraper
- Fix/Improve movietv scraper
- Add 9movies scraper

[B]Version 1.0.93[/B]
- Fix movietv scraper
- Improve dizilab scraper
- Improve 2movies scraper
- Improve CouchertunerV1 scraper

[B]Version 1.0.92[/B]
- Fix cyberreel scraper
- Fix viooz scraper
- Fix zumvo scraper
- Fix 2movies scraper
- Fix onlinemovies.pro scraper
- Improve dizigold scraper

[B]Version 1.0.91[/B]
- Improve random UA algorithm
- Fix private trakt list handling
- Add premiumize scraper
- Make dd.tv https & show x265 info
- Add extra info to easynews results
- Fix diziay scraper

[B]Version 1.0.90[/B]
- Fix mvl scraper
- Randomize User Agent

[B]Version 1.0.88[/B]
- Add MoviesPlanet scraper
- Updated Hebrew translation
- Fix dizipas scraper

[B]Version 1.0.87[/B]
- Fix dizipas scraper
- Return to SRU window after search
- Improve moveitv scraper