@@ -1,3 +1,11 @@
+[B]Version 1.0.100[/B]
+- Fix rel_url key length for MySQL 32 bit
+- Fix mvl scraper
+- Remove moviefarsi
+- Rename oneclickwatch to ocw
+- Start work to make iflix a private scraper
+- Fix WatchHD scraper
+
 [B]Version 1.0.99[/B]
 - Fix movietv.to scraper
 - Improve WatchHD scraper
